--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dash-table==5.0.0
 dash_auth==2.3.0
 Flask==3.0.3
 Flask-Session==0.8.0
+gunicorn==21.2.0
 idna==3.10
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
